# trading-agents-v2

./: .env.example  .gitignore  CLAUDE.md  MIGRATION.md  README.md  pyproject.toml
config/: accounts.yaml  settings.py
data/: MXF_Daily_Clean_2020_to_now.parquet
docs/: DEPLOYMENT.md  systemd_unit_hardening.md  systemd_updater_timer.md
scripts/: daily_health_check.py  deep_health_check.py  init_data.py  optimize_parameters.py  pnl_tracker.py  post_execution_verify.py  pre_settlement_check.py  probe_shioaji_kbars_end_semantics.py  production_smoke_test.py  reconcile_recent_bars.py  run_live.py  run_tw_backtest.py  run_tw_daily_cron.sh  run_tw_live.py  scan_pollution.py  start_paper.sh  stop_paper.sh  sync_state.py  test_connection.py  test_fetch.py  test_line_notify.py  test_shioaji.py  test_tw_fetch.py  trading-agents-v2.service  verify_data.py  verify_engine.py
tests/: __init__.py  fakes.py  test_adx_filter.py  test_backtester.py  test_breakout_swing.py  test_daily_updater.py  test_data_validation.py  test_deep_health_check.py  test_ensure_parquet_fresh.py  test_executor.py  test_freshness.py  test_full_day_simulation.py  test_health_freshness.py  test_kill_switch.py  test_margin_safety.py  test_night_guard.py  test_notification_pnl.py  test_orchestrator.py  test_order_batching.py  test_pnl_tracker.py  test_reconcile_spot_guard.py  test_regressions.py  test_risk_manager.py  test_robustness_fixes.py  test_settlement.py  test_settlement_rollover.py  test_shioaji_fetcher.py  test_spot_ref.py  test_startup_smoke.py  test_state_manager.py  test_state_path_resolution.py  (+3 more)
(+92 files in other folders)
