[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Core data / numerics
    "pandas>=2.0",
    "numpy>=1.26",

    # Backtesting
    "vectorbt>=0.26",

    # Persistence & config
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",

    # US market data + broker
    "alpaca-py>=0.8.0",

    # Taiwan brokers (台指期)
    "shioaji>=1.1",           # 永豐證券 API (stocks + futures)
    "fugle-trade>=0.4",       # 富果證券 API

    # Scheduling & UI
    "apscheduler>=3.10",
    "rich>=13.0",

    # HTTP
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "us_equity*", "tw_futures*", "agents*", "data*", "shared*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
